test/Programs/InvalidTests/invalidIn/invalidIn.fst

-- It doesn't really matter, it should not throw an error here
start : Int
start = 23


fun : !Int -> Int
fun c = receive c
